--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,9 @@
-name: scratch
+name: pomegranate
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python
+  - python==3.11
   - numpy
   - munch
   - pandas
