--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,104 @@
 [build-system]
-requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm[toml]>=3.4"]
+requires = ["setuptools>=64", "setuptools_scm>=8"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools_scm]
-write_to = "ctdcal/_version.py"
-write_to_template = 'version = "{version}"'
+[project]
+name = "ctdcal"
+dynamic = ["version"]
+description = "CTD and bottle data processing package from SIO ODF"
+authors = [
+    { name = "Joseph Gum" },
+    { name = "Andrew Barna" },
+    { name = "Michael Kovatch" }
+]
+maintainers = [
+    { name = "Aaron Mau", email = "ajmau@ucsd.edu" },
+    { name = "Allen Smith", email = "als026@ucsd.edu" }
+]
+keywords = ["oceanography", "seawater", "TEOS-10", "ctd", "calibration"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Console",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: BSD License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Topic :: Scientific/Engineering :: Oceanography"
+]
+dependencies = [
+    "bokeh",
+    "click==8.0.1",
+    "gsw",
+    "matplotlib",
+    "munch",
+    "numpy < 2.0.0",
+    "pandas",
+    "PyYAML",
+    "requests",
+    "scipy"
+]
+requires-python = ">=3.10"
+readme = "README.md"
+license = { file = "LICENSE.md" }
 
-[tool.isort]
-profile = "black"
+[project.optional-dependencies]
+dev = [
+    "black",
+    "flake8",
+    "isort",
+    "pre-commit",
+    "pytest"
+]
+docs = [
+    "Sphinx==7.3.3",
+    "jupyter==1.0.0",
+    "furo==2024.1.29",
+    "nbsphinx==0.9.4",
+    "jupytext"
+]
+tests = [
+    "ctdcal[dev]",
+    "mypy",
+    "pytest-cov"
+]
+complete = [
+    "ctdcal[tests,docs]"
+]
+
+[project.urls]
+Homepage = "https://github.com/SIO-ODF/ctdcal"
+Documentation = "https://ctdcal.readthedocs.io/en/latest/"
+
+[project.scripts]
+ctdcal = "ctdcal.__main__:cli"
+
+[tool.setuptools_scm]
+version_file = "ctdcal/_version.py"
+version_file_template = 'version = "{version}"'
+
+[tool.ruff]
+target-version = "py310"
+
+[tool.ruff.format]
+# Use `\n` line endings for all files
+line-ending = "lf"
+# Leave the quotes of all strings unchanged
+quote-style = "preserve"
+
+[tool.ruff.lint]
+ignore = [
+    "E203",
+    "E266",
+    # workaround for jupytext pypercent cell comments
+    "E302",
+    # line too long, handled with black
+    "E501",
+    "W503",
+    "F403"
+]
 
 [tool.mypy]
 python_version = 3.11
