--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "requests",
     "scipy"
 ]
-requires-python = "==3.11"
+requires-python = ">=3.8, <=3.11"
 readme = "README.md"
 license = { file = "LICENSE.md" }
 
@@ -74,7 +74,7 @@ Documentation = "https://ctdcal.readthedocs.io/en/latest/"
 ctdcal = "ctdcal.__main__:cli"
 
 [tool.hatch.build.targets.sdist]
-include = ["/ctdcal*"]
+include = ["/ctdcal*", "*.md"]
 exclude = ["tests*"]
 
 [tool.hatch.version]
