loosening click dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ classifiers = [
 ]
 dependencies = [
     "bokeh",
-    "click==8.0.1",
+    "click",
     "gsw",
     "matplotlib",
     "munch",
@@ -79,6 +79,9 @@ exclude = ["tests*"]
 
 [tool.hatch.version]
 source = "vcs"
+
+[tool.hatch.version.raw-options]
+local_scheme = "no-local-version"
 
 [tool.hatch.build.hooks.vcs]
 version-file = "ctdcal/_version.py"
