--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,13 +34,13 @@ dependencies = [
     "gsw",
     "matplotlib",
     "munch",
-    "numpy < 2.0.0",
+    "numpy",
     "pandas",
     "PyYAML",
     "requests",
     "scipy"
 ]
-requires-python = ">=3.8, <=3.11"
+requires-python = ">=3.8,<=3.11"
 readme = "README.md"
 license = { file = "LICENSE.md" }
 
