--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,17 +30,17 @@ classifiers = [
 ]
 dependencies = [
     "bokeh",
-    "click==8.0.1",
+    "click",
     "gsw",
     "matplotlib",
     "munch",
-    "numpy < 2.0.0",
+    "numpy",
     "pandas",
     "PyYAML",
     "requests",
     "scipy"
 ]
-requires-python = ">=3.8,<3.12"
+requires-python = ">=3.9,<3.12"
 readme = "README.md"
 license = { file = "LICENSE.md" }
 
